Fix landing layout bug

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -3,8 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
 	margin-top:70px;
-  background-color: #1a4055;
-  color: white;
 }
 .my_icon{
 	 font-size:1500%;
